# polymarket-trader

./: CLAUDE.md  README.md  bot.py  conftest.py  forecast.py  prediction.py  pyproject.toml  report.html  requirements.txt  setup.cfg  temp_conversions.csv  temp_conversions.py  weather.csv  weather.py
configs/weather/: sites.json  sites.yaml  training_sites.json  training_sites.yaml
src/: paths.py
src/bot/: app.py
src/db/: __init__.py  bets.py
src/nba/: README.md  backtest_player_minutes.py  backtest_team_score.py  backtest_total_score.py  data.py  eda.py  markets.py  predict.py  strategy.py
src/polymarket_trader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/weather/: README.md  analysis.py  backtest.py  backtest_peak.py  backtest_rounding.py  bracket_model.py  eda.py  eda_conditions.py  experiment_log.md  forecast.py  market.py  observations.py  peak_model.py  prediction.py  sites.py  strategy.py  viz_day.py  viz_margin.py
